# pydantic-xml-converter

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
pydantic_xml/: __init__.py
tests/: test_pydantic_xml.py
