[tool.poetry]
name = "pydantic-xml-converter"
version = "0.0.13"
description = ""
authors = ["Patrick Withams <pwithams@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pwithams/pydantic-xml-converter"
packages = [{include = "pydantic_xml"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
autoflake = "^2.0.0"
isort = "^5.11.4"
toml-cli = "^0.3.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
extension-pkg-whitelist = ["pydantic"]
fail-under = 1

[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
max-line-length = 100

[tool.pylint."messages control"]
disable = ["too-few-public-methods", "missing-function-docstring", "missing-class-docstring", "missing-module-docstring"]

[tool.pylint.similarities]
ignore-imports = "yes"

[tool.pylint.design]
max-attributes = 10
max-locals = 20

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["pydantic_xml"]

[tool.coverage.report]
show_missing = true
fail_under = 80
